--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,15 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+python-dotenv = "^1.0.0"
+pytest = "^7.4.3"
 
+
+[tool.poetry.group.dev.dependencies]
+black = "^23.10.1"
+flake8 = "^6.1.0"
+pylint = "^3.0.2"
+isort = "^5.12.0"
 
 [build-system]
 requires = ["poetry-core"]
