--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.11"
 python-dotenv = "^1.0.0"
 pytest = "^7.4.3"
+aiogram = "^3.1.1"
 
 
 [tool.poetry.group.dev.dependencies]
