--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.11"
 python-dotenv = "^1.0.0"
 pytest = "^7.4.3"
 aiogram = "^3.1.1"
+motor = "^3.3.1"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -17,7 +18,11 @@ black = "^23.10.1"
 flake8 = "^6.1.0"
 pylint = "^3.0.2"
 isort = "^5.12.0"
+pytest-asyncio = "^0.21.1"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
